--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,23 +12,23 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  provider: ^6.1.1
-  equatable: ^2.0.5
-  uuid: ^4.3.3
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  cloud_firestore: ^4.13.6
-  fl_chart: ^0.66.0
+  provider: ^6.1.2
+  equatable: ^2.0.7
+  uuid: ^4.5.1
+  firebase_core: ^3.12.0
+  firebase_auth: ^5.5.0
+  cloud_firestore: ^5.6.4
+  fl_chart: ^0.70.2
   intl: ^0.19.0
-  shared_preferences: ^2.2.2
-  image_picker: ^1.0.7
-  firebase_storage: ^11.5.6
-  easy_localization: ^3.0.3
-  flutter_svg: ^2.0.9
+  shared_preferences: ^2.5.2
+  image_picker: ^1.0.7 
+  firebase_storage: ^12.4.3
+  easy_localization: ^3.0.7+1
+  flutter_svg: ^2.0.17
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  path_provider: ^2.1.2
-  get_it: ^7.2.0
+  path_provider: ^2.1.5
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
