--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,19 +18,16 @@ dependencies:
   firebase_core: ^3.12.0
   firebase_auth: ^5.5.0
   cloud_firestore: ^5.6.4
-  fl_chart: ^0.70.2
   intl: ^0.19.0
   shared_preferences: ^2.5.2
-  image_picker: ^1.0.7 
-  firebase_storage: ^12.4.3
   easy_localization: ^3.0.7+1
-  flutter_svg: ^2.0.17
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  path_provider: ^2.1.5
+  permission_handler: ^11.4.0
   get_it: ^8.0.3
   flutter_local_notifications: ^18.0.0
   timezone: ^0.10.0
+  flutter_timezone: ^4.1.0  
   flutter_datetime_picker_plus: ^2.2.0
 
 dev_dependencies:
